<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SxDuoCommand" Id="{f3bc2133-a027-40ac-b4a0-5029b99faa89}">
    <Declaration><![CDATA[TYPE SxDuoCommand :
STRUCT
	FireAlarmOut: BOOL;
	ActivateFireAlarm: BOOL;
	ResetSmokeDetector: BOOL;
	ForceExercise: BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>